# rag_system

./: .gitignore  README.md  eda.ipynb  evaluation_loop.py  instructions.md  main.py  pyproject.toml
data/: bonus.jsonl  train.jsonl  valid.jsonl
documents/: Coveo_QA_Review.pptx
mini_rag/: __init__.py  arguments.py  chunker.py  corpus.py  evaluation.py  index_store.py  metrics.py  qna_system.py  rag_system.py  reader.py  reranker.py  retriever.py
scripts/: eval.sh  serve.sh
