[project]
name = "coveo-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "flash-attn-3",
    "sentence-transformers",
    "huggingface",
    "datasets",
    "accelerate",
    "deepspeed",
    "evaluate",
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "ipykernel",
    "jupyterlab",
    "loguru",
    "ipywidgets",
    "matplotlib",
    "wandb",
    "pre-commit",
    "ollama",
    "openai",
    "faiss-cpu",
    "rank-bm25",
    "rouge-score",
    "tqdm", 
    "vllm>=0.6.0",
]

[tool.uv.sources]
torch = {index = "pytorch-cu130", marker = "sys_platform == 'linux'"}
torchvision = {index = "pytorch-cu130", marker = "sys_platform == 'linux'"}
torchaudio = {index = "pytorch-cu130", marker = "sys_platform == 'linux'"}
flash-attn-3 = {url = "https://github.com/windreamer/flash-attention3-wheels/releases/download/2026.06.09-20ddfb1/flash_attn_3-3.0.0+20260609.cu130torch2120cxx11abitrue.bc58ab-cp310-abi3-linux_x86_64.whl"}


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"


[tool.setuptools.packages.find]
    where = ["."] # Search in the current directory
    include = ["mini_rag"] # Include packages starting with these names

# Configuration for uv
[tool.uv]
index-strategy = "unsafe-best-match" # Crucial for resolving complex dependency conflicts
no-build-isolation-package = ["flash-attn-3"]
