[project]
name = "coveo-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "flash-attn-3",
    "sentence-transformers",
    "huggingface",
    "datasets",
    "accelerate",
    "deepspeed",
    "evaluate",
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "ipykernel",
    "jupyterlab",
    "loguru",
    "ipywidgets",
    "matplotlib",
    "wandb",
    "pre-commit",
    "ollama>=0.6.2",
    "faiss-cpu>=1.14.2",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "tqdm>=4.68.1",
]

[tool.uv.sources]
torch = {index = "pytorch-cu132", marker = "sys_platform == 'linux'"}
torchvision = {index = "pytorch-cu132", marker = "sys_platform == 'linux'"}
torchaudio = {index = "pytorch-cu132", marker = "sys_platform == 'linux'"}
flash-attn-3 = { url = "https://github.com/windreamer/flash-attention3-wheels/releases/download/2026.05.20-072445f/flash_attn_3-3.0.0%2B20260519.cu132torch2120cxx11abitrue.8a8b2f-cp39-abi3-linux_x86_64.whl" }


[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"


[tool.setuptools.packages.find]
    where = ["."] # Search in the current directory
    include = ["mini_rag"] # Include packages starting with these names

# Configuration for uv
[tool.uv]
index-strategy = "unsafe-best-match" # Crucial for resolving complex dependency conflicts
no-build-isolation-package = ["flash-attn-3"]
